--- a/index.html
+++ b/index.html
@@ -61,21 +61,9 @@
 
         fetchData();
     </script>
+<style>
+  img {
+    cursor: pointer; /* Biến con trỏ thành bàn tay khi rê chuột vào ảnh */
+  }
+</style>
 
-</body>
-</html>
-<select id="dropdown"></select>
-
-<script>
-  fetch("https://script.google.com/macros/s/AKfycbydcsLy9XnX3hol4mJ_jij8wCi4NdDRBfu8JpJttOV6RC-px24uFDWFLYhomOU0cUQ-/exec")
-    .then(response => response.json())
-    .then(data => {
-      let dropdown = document.getElementById("dropdown");
-      data.forEach(item => {
-        let option = document.createElement("option");
-        option.text = item;
-        dropdown.appendChild(option);
-      });
-    })
-    .catch(error => console.error("Lỗi khi tải danh sách:", error));
-</script>
