--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     <table id="dataTable">
         <thead>
             <tr>
-                <th>ID</th>
                 <th>Hãng Máy</th>
                 <th>AEC</th>
                 <th>Tên Máy</th>
@@ -48,8 +47,7 @@
             const tableBody = document.querySelector("#dataTable tbody");
 
             data.forEach(item => {
-                let row = `<tr>
-                    <td>${item.ID}</td>
+                let row = <tr>
                     <td>${item.HANGMAY}</td>
                     <td>${item.AEC}</td>
                     <td>${item.TENMAY}</td>
