--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Danh sách máy</title>
     <style>
         table {
-            width: 100%; 
+            width: 100%;
             border-collapse: collapse;
             margin: 20px 0;
             font-size: 18px;
@@ -41,13 +41,13 @@
 
     <script>
         async function fetchData() {
-            const url = "https://script.google.com/macros/s/AKfycbx1I2RrKQBASfSYVFckd8lKBHMwKuYUY-FgS5azRLuVO4r3cjB4YBVAF66NCg_gOfeV/exec"; // Thay YOUR_SCRIPT_ID bằng ID của Apps Script
+            const url = "https://script.google.com/macros/s/AKfycbx5IHSFGOz6p0RDXUEgme6QQEoBR8_uvLud3ihBqdysVEYIASSAubbAFTflqeMdl9hT/exec"; // Thay YOUR_SCRIPT_ID bằng ID của Apps Script
             const response = await fetch(url);
             const data = await response.json();
             const tableBody = document.querySelector("#dataTable tbody");
 
             data.forEach(item => {
-                let row = <tr>
+                let row = `<tr>
                     <td>${item.HANGMAY}</td>
                     <td>${item.AEC}</td>
                     <td>${item.TENMAY}</td>
@@ -59,9 +59,6 @@
 
         fetchData();
     </script>
-<style>
-  img {
-    cursor: pointer; /* Biến con trỏ thành bàn tay khi rê chuột vào ảnh */
-  }
-</style>
 
+</body>
+</html>
