--- a/index.html
+++ b/index.html
@@ -62,3 +62,8 @@
 
 </body>
 </html>
+<style>
+  table tr td:first-child, table tr th:first-child {
+    display: none; /* Ẩn cột đầu tiên (ID) */
+  }
+</style>
