--- a/index.html
+++ b/index.html
@@ -67,3 +67,8 @@
     display: none; /* Ẩn cột đầu tiên (ID) */
   }
 </style>
+<style>
+  img {
+    cursor: pointer; /* Biến con trỏ thành bàn tay */
+  }
+</style>
