--- a/index.html
+++ b/index.html
@@ -65,3 +65,8 @@
     cursor: pointer; /* Biến con trỏ thành bàn tay */
   }
 </style>
+<td>
+  <a href="https://i.postimg.cc/593fs0LF/Lung-Cancer-Screening-CT-images-9.jpg" target="_blank">
+    <img src="https://i.postimg.cc/593fs0LF/Lung-Cancer-Screening-CT-images-9.jpg" width="100">
+  </a>
+</td>
