--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
                     <td>${item.AEC}</td>
                     <td>${item.TENMAY}</td>
                     <td><img src="${item.LINK}" alt="Hình ảnh máy"></td>
+                    <td>
+  <a href="https://i.postimg.cc/593fs0LF/Lung-Cancer-Screening-CT-images-9.jpg" target="_blank">
+    <img src="https://i.postimg.cc/593fs0LF/Lung-Cancer-Screening-CT-images-9.jpg" width="100" onclick="openModal(this, event)">
+  </a>
+</td>
                 </tr>`;
                 tableBody.innerHTML += row;
             });
@@ -65,8 +70,3 @@
     cursor: pointer; /* Biến con trỏ thành bàn tay */
   }
 </style>
-<td>
-  <a href="https://i.postimg.cc/593fs0LF/Lung-Cancer-Screening-CT-images-9.jpg" target="_blank">
-    <img src="https://i.postimg.cc/593fs0LF/Lung-Cancer-Screening-CT-images-9.jpg" width="100">
-  </a>
-</td>
