--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Danh sách thiết bị</title>
+    <title>DANH SÁCH THIÊT BỊ VÀ THÔNG SỐ CÀI ĐẶT CHO KỸ THUẬT CT PHỔI LIỀU THẤP</title>
     <style>
         body {
             font-family: Arial, sans-serif;
