--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <th>Hãng Máy</th>
                 <th>AEC</th>
                 <th>Tên Máy</th>
-                <th>Hình Ảnh</th>
+                <th>Thông số</th>
             </tr>
         </thead>
         <tbody id="table-body">
