--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     <table>
         <thead>
             <tr>
-                <th>Hãng Máy</th>
+                <th>HÃNG MÁY</th>
                 <th>AEC</th>
-                <th>Tên Máy</th>
-                <th>Thông số</th>
+                <th>TÊN MÁY</th>
+                <th>THÔNG SỐ</th>
             </tr>
         </thead>
         <tbody id="table-body">
