--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DANH SÁCH THIÊT BỊ VÀ THÔNG SỐ CÀI ĐẶT CHO KỸ THUẬT CT PHỔI LIỀU THẤP</title>
     <style>
+        td:first-child {
+    font-weight: bold;
+}
+
         body {
             font-family: Arial, sans-serif;
             text-align: center; /* Căn giữa nội dung */
