--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         body {
             font-family: Arial, sans-serif;
-            text-align: center; /* Căn giữa nội dung */
+            text-align: left; /* Căn giữa nội dung */
         }
         h2 {
             text-align: center; /* Căn giữa tiêu đề */
