--- a/index.html
+++ b/index.html
@@ -36,51 +36,14 @@
         }
     </style>
 </head>
+    
 <body>
 <!DOCTYPE html>
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Khuyến cáo Tầm soát Ung thư Phổi bằng LDCT</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 20px;
-            padding: 20px;
-            background-color: #f4f4f4;
-        }
-        .container {
-            max-width: 800px;
-            background: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h1, h2 {
-            color: #333;
-        }
-        .organization {
-            margin-bottom: 20px;
-            padding: 10px;
-            border-left: 5px solid #007BFF;
-            background: #f9f9f9;
-        }
-        .summary {
-            padding: 15px;
-            background: #e9ecef;
-            border-radius: 5px;
-        }
-    </style>
-</head>
-<body>
-    <!DOCTYPE html>
-<html lang="vi">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Khuyến cáo Tầm soát Ung thư Phổi bằng LDCT</title>
+    <title>Khuyến cáo Tầm soát Ung thư Phổi</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -96,26 +59,29 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
         }
         h1 {
-            text-align: center;
             color: #333;
         }
         .grid-container {
             display: flex;
-            flex-wrap: wrap;
             justify-content: space-between;
+            gap: 20px; /* Khoảng cách giữa 2 cột */
         }
         .organization {
-            width: 40%;
-            margin-bottom: 20px;
-            padding: 15px;
-            border-left: 5px solid #007BFF;
+            width: 50%;
+            padding: 20px;
             background: #f9f9f9;
+            border-left: 5px solid #007BFF;
             border-radius: 5px;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+            box-sizing: border-box;
         }
         @media (max-width: 768px) {
+            .grid-container {
+                flex-direction: column;
+            }
             .organization {
                 width: 100%;
             }
@@ -124,10 +90,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Khuyến cáo Tầm soát Ung thư Phổi bằng LDCT</h1>
+        <h1>Khuyến cáo Tầm soát Ung thư Phổi</h1>
         <div class="grid-container">
             <div class="organization">
-                <h2>1. Hiệp hội Ung thư Hoa Kỳ (ACS)</h2>
+                <h2>Hiệp hội Ung thư Hoa Kỳ (ACS)</h2>
                 <p><strong>Đối tượng:</strong></p>
                 <ul>
                     <li>Tuổi: 50 - 80</li>
@@ -136,41 +102,10 @@
                 </ul>
             </div>
             <div class="organization">
-                <h2>2. USPSTF</h2>
-                <p><strong>Đối tượng:</strong></p>
-                <ul>
-                    <li>Tuổi: 50 - 80</li>
-                    <li>Hút thuốc ≥ 20 gói-năm</li>
-                    <li>Đang hút hoặc đã bỏ trong vòng 15 năm</li>
-                    <li>Không có bệnh lý nghiêm trọng hạn chế điều trị</li>
-                </ul>
-            </div>
-            <div class="organization">
-                <h2>3. Hiệp hội Phổi Hoa Kỳ (ALA)</h2>
+                <h2>Hiệp hội Phổi Hoa Kỳ (ALA)</h2>
                 <p><strong>Đối tượng:</strong></p>
                 <ul>
                     <li>Giống USPSTF</li>
-                </ul>
-            </div>
-            <div class="organization">
-                <h2>4. ASCO</h2>
-                <p><strong>Đối tượng:</strong></p>
-                <ul>
-                    <li>Giống USPSTF & ACS</li>
-                </ul>
-            </div>
-            <div class="organization">
-                <h2>5. ACR & ATS</h2>
-                <p><strong>Đối tượng:</strong></p>
-                <ul>
-                    <li>Giống USPSTF</li>
-                </ul>
-            </div>
-            <div class="organization">
-                <h2>6. ESMO</h2>
-                <p><strong>Đối tượng:</strong></p>
-                <ul>
-                    <li>Ủng hộ LDCT, cân nhắc theo quốc gia</li>
                 </ul>
             </div>
         </div>
