--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
+            text-align: left;
         }
         h1 {
             color: #333;
@@ -105,7 +105,10 @@
                 <h2>Hiệp hội Phổi Hoa Kỳ (ALA)</h2>
                 <p><strong>Đối tượng:</strong></p>
                 <ul>
-                    <li>Giống USPSTF</li>
+                    <li>Tuổi: 50 - 80</li>
+                    <li>Hút thuốc ≥ 20 gói-năm</li>
+                    <li>Đang hút hoặc đã bỏ trong vòng 15 năm</li>
+                    <li>Không có bệnh lý nghiêm trọng hạn chế điều trị</li>
                 </ul>
             </div>
         </div>
