--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             text-align: left;
         }
-        h1 {
-            color: #333;
-        }
+       h1 {
+    text-align: center; /* Căn giữa tiêu đề */
+    margin-top: 20px;
+}
         .grid-container {
             display: flex;
             justify-content: space-between;
