--- a/index.html
+++ b/index.html
@@ -117,7 +117,80 @@
 </body>
 </html>
 
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bảng Liều Nhiễm Xạ LDCT</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background-color: #f4f4f4;
+            text-align: center;
+        }
+        .table-container {
+            max-width: 800px;
+            margin: auto;
+            background: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            border: 2px solid blue;
+        }
+        th, td {
+            border: 1px solid blue;
+            padding: 10px;
+            text-align: center;
+        }
+        th {
+            background-color: #007BFF;
+            color: white;
+        }
+        td strong {
+            color: #0056b3;
+        }
+    </style>
+</head>
+<body>
+    <div class="table-container">
+        <h2>Bảng Liều Nhiễm Xạ Trong CT Phổi Liều Thấp</h2>
+        <table>
+            <tr>
+                <th>Tổ chức</th>
+                <th>Chỉ số DLP (mGy·cm)</th>
+                <th>Chỉ số CTDIvol (mGy)</th>
+                <th>Ghi chú</th>
+            </tr>
+            <tr>
+                <td><strong>American College of Radiology (ACR)</strong></td>
+                <td>≤ 75 (Nam) / ≤ 60 (Nữ)</td>
+                <td>≤ 3.0</td>
+                <td>Áp dụng cho bệnh nhân BMI < 30</td>
+            </tr>
+            <tr>
+                <td><strong>European Guidelines (EU-ETS, ESR)</strong></td>
+                <td>≤ 100</td>
+                <td>≤ 3.0</td>
+                <td>Mức liều tối ưu cho tầm soát</td>
+            </tr>
+            <tr>
+                <td><strong>American Association of Physicists in Medicine (AAPM)</strong></td>
+                <td>≤ 100</td>
+                <td>≤ 3.0</td>
+                <td>Hướng dẫn giới hạn liều</td>
+            </tr>
+        </table>
+    </div>
+</body>
+</html>
 
+    
     <h2>DANH SÁCH THIÊT BỊ VÀ THÔNG SỐ CÀI ĐẶT CHO KỸ THUẬT CT PHỔI LIỀU THẤP</h2>
     
     <table>
