--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-top: 30px; /* Thêm khoảng cách giữa hai bảng */
         }
         table {
             width: 100%;
