--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Khuyến cáo Tầm soát Ung thư Phổi</h1>
+        <h1>KHUYẾN CÁO CÁC ĐIỀU KIỆN TẦM SOÁT UNG THƯ PHỔIi</h1>
         <div class="grid-container">
             <div class="organization">
                 <h2>Hiệp hội Ung thư Hoa Kỳ (ACS)</h2>
@@ -160,7 +160,7 @@
 </head>
 <body>
     <div class="table-container">
-        <h2>Bảng Liều Nhiễm Xạ Trong CT Phổi Liều Thấp</h2>
+        <h2>LIỀU PHƠI NHIỄM KHUYẾN NGHỊ TRONG LDCT</h2>
         <table>
             <tr>
                 <th>Tổ chức</th>
