--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             background-color: #f0f8ff; /* Màu nền nhạt cho tiêu đề */
         }
         img {
-            width: 100px;
+            width: 300px;
             cursor: pointer;
         }
     </style>
@@ -91,7 +91,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>KHUYẾN CÁO CÁC ĐIỀU KIỆN TẦM SOÁT UNG THƯ PHỔIi</h1>
+        <h1>KHUYẾN CÁO CÁC ĐIỀU KIỆN TẦM SOÁT UNG THƯ PHỔI</h1>
         <div class="grid-container">
             <div class="organization">
                 <h2>Hiệp hội Ung thư Hoa Kỳ (ACS)</h2>
