--- a/index.html
+++ b/index.html
@@ -3,6 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chữ Chạy Giữa Trang</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            overflow: hidden;
+        }
+        .marquee-container {
+            width: 100%;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+        .marquee-text {
+            font-size: 24px;
+            font-weight: bold;
+            color: #007BFF;
+            white-space: nowrap;
+            position: absolute;
+            animation: moveText 3s linear forwards;
+        }
+        @keyframes moveText {
+            0% { left: -100%; }
+            100% { left: 50%; transform: translateX(-50%); }
+        }
+    </style>
+</head>
+<body>
+
+    <div class="marquee-container">
+        <div class="marquee-text">🔥 Chào mừng bạn đến với trang web của chúng tôi! 🔥</div>
+    </div>
+
+</body>
+</html>
+
+
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DANH SÁCH THIÊT BỊ VÀ THÔNG SỐ CÀI ĐẶT CHO KỸ THUẬT CT PHỔI LIỀU THẤP</title>
     <style>
         td:first-child {
@@ -31,7 +79,7 @@
             background-color: #f0f8ff; /* Màu nền nhạt cho tiêu đề */
         }
         img {
-            width: 500px;
+            width: 100px;
             cursor: pointer;
         }
     </style>
