--- a/index.html
+++ b/index.html
@@ -36,6 +36,49 @@
         }
     </style>
 </head>
+
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chữ Chạy Trên Cùng</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .marquee-container {
+            width: 100%;
+            position: absolute;
+            top: 10px; /* Đặt vị trí trên cùng */
+            left: 0;
+        }
+        .marquee-text {
+            font-size: 24px;
+            font-weight: bold;
+            color: #007BFF;
+            white-space: nowrap;
+            position: absolute;
+            animation: moveText 3s linear forwards;
+        }
+        @keyframes moveText {
+            0% { left: -100%; }
+            100% { left: 50%; transform: translateX(-50%); }
+        }
+    </style>
+</head>
+<body>
+
+    <div class="marquee-container">
+        <div class="marquee-text">🔥 Chào mừng bạn đến với trang web của chúng tôi! 🔥</div>
+    </div>
+
+</body>
+</html>
+
     
 <body>
 <!DOCTYPE html>
