--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             position: absolute;
             top: 10px; /* Đặt vị trí trên cùng */
             left: 0;
+            padding-bottom: 30px; /* Tạo khoảng cách với bảng bên dưới */
         }
         .marquee-text {
             font-size: 24px;
@@ -62,7 +63,7 @@
             color: #007BFF;
             white-space: nowrap;
             position: absolute;
-            animation: moveText 3s linear forwards;
+            animation: moveText 7s linear forwards;
         }
         @keyframes moveText {
             0% { left: -100%; }
