--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <body>
 
     <div class="marquee-container">
-        <div class="marquee-text">🔥 Chào mừng bạn đến với trang web của chúng tôi! 🔥</div>
+        <div class="marquee-text">🔥 Chào mừng bạn đến với trang tra cứu thông tin về LDCT của nhóm KTV 3 Miền! 🔥</div>
     </div>
 
 </body>
