--- a/index.html
+++ b/index.html
@@ -42,43 +42,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chữ Chạy Trên Cùng</title>
+    <title>Chữ Dàn Ra Hai Bên</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
+            text-align: center;
         }
         .marquee-container {
             width: 100%;
             position: absolute;
-            top: 10px; /* Đặt vị trí trên cùng */
-            left: 0;
-            padding-bottom: 30px; /* Tạo khoảng cách với bảng bên dưới */
+            top: 20px; /* Điều chỉnh vị trí */
+            left: 50%;
+            padding-bottom: 50px; /* Tạo khoảng cách với bảng bên dưới */
+            transform: translateX(-50%);
+            overflow: hidden;
         }
         .marquee-text {
             font-size: 24px;
             font-weight: bold;
             color: #007BFF;
+            display: inline-block;
+            animation: spreadText 4s ease-in-out forwards;
             white-space: nowrap;
-            position: absolute;
-            animation: moveText 7s linear forwards;
         }
-        @keyframes moveText {
-            0% { left: -100%; }
-            100% { left: 50%; transform: translateX(-50%); }
+        @keyframes spreadText {
+            0% {
+                letter-spacing: -10px; /* Ban đầu chữ co lại */
+                opacity: 0;
+            }
+            50% {
+                opacity: 1;
+            }
+            100% {
+                letter-spacing: 10px; /* Mở rộng dần ra */
+            }
+        }
+        .content {
+            margin-top: 80px; /* Đảm bảo nội dung bên dưới không dính vào chữ chạy */
         }
     </style>
 </head>
 <body>
 
     <div class="marquee-container">
-        <div class="marquee-text">🔥 Chào mừng bạn đến với trang tra cứu thông tin về LDCT của nhóm KTV 3 Miền! 🔥</div>
+        <div class="marquee-text">🔥 Chào mừng bạn đến với trang tra cứu thông tin về LDCT của nhóm KTV 3 Miền 🔥</div>
     </div>
-
-</body>
-</html>
 
     
 <body>
