--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             }
         }
         .content {
-            margin-top: 150px; /* Đảm bảo nội dung bên dưới không dính vào chữ chạy */
+            margin-bot: 150px; /* Đảm bảo nội dung bên dưới không dính vào chữ chạy */
         }
     </style>
 </head>
@@ -118,7 +118,7 @@
         }
        h1 {
     text-align: center; /* Căn giữa tiêu đề */
-    margin-top: 100px;
+    margin-top: 30px;
 }
         .grid-container {
             display: flex;
