--- a/index.html
+++ b/index.html
@@ -3,99 +3,137 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DANH SÁCH THIÊT BỊ VÀ THÔNG SỐ CÀI ĐẶT CHO KỸ THUẬT CT PHỔI LIỀU THẤP</title>
+    <title>Tầm Soát Ung Thư Phổi - LDCT</title>
+    <link rel="stylesheet" href="style.css">
     <style>
-        td:first-child {
-    font-weight: bold;
-}
-
         body {
             font-family: Arial, sans-serif;
-            text-align: left; /* Căn giữa nội dung */
+            background-color: #f4f6f9;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
         }
-        h2 {
-            text-align: center; /* Căn giữa tiêu đề */
-        }
-        table {
-            width: 80%;
-            margin: 0 auto; /* Căn giữa bảng */
-            border-collapse: collapse;
-            border: 2px solid blue; /* Viền bảng màu xanh dương */
-        }
-        th, td {
-            border: 1px solid blue; /* Viền từng ô màu xanh dương */
-            padding: 8px;
+
+        header {
+            background-color: #007BFF;
+            color: white;
+            padding: 20px 0;
             text-align: center;
         }
-        th {
-            background-color: #f0f8ff; /* Màu nền nhạt cho tiêu đề */
-        }
-        img {
-            width: 100px;
-            cursor: pointer;
-        }
-    </style>
-</head>
 
-<body>
-<!DOCTYPE html>
-<html lang="vi">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Khuyến cáo Tầm soát Ung thư Phổi</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 20px;
-            padding: 20px;
-            background-color: #f4f4f4;
+        header h1 {
+            margin: 0;
+            font-size: 24px;
         }
-        .container {
+
+        .subhead {
+            font-size: 16px;
+            opacity: 0.9;
+        }
+
+        .credits {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .credits img {
+            width: 100px;
+            margin-bottom: 10px;
+        }
+
+        .credits p {
+            font-weight: bold;
+            font-size: 16px;
+            color: #333;
+        }
+
+        section {
             max-width: 1000px;
-            margin: auto;
+            margin: 30px auto;
             background: #fff;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            text-align: left;
         }
-       h1 {
-    text-align: center; /* Căn giữa tiêu đề */
-    margin-top: 10px;
-}
-        .grid-container {
+
+        h2 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .grid-2col {
             display: flex;
-            justify-content: space-between;
-            gap: 20px; /* Khoảng cách giữa 2 cột */
+            gap: 20px;
+            flex-wrap: wrap;
         }
+
         .organization {
-            width: 50%;
-            padding: 20px;
+            flex: 1 1 45%;
             background: #f9f9f9;
             border-left: 5px solid #007BFF;
+            padding: 15px;
             border-radius: 5px;
-            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-            box-sizing: border-box;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.05);
         }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            border: 2px solid #007BFF;
+        }
+
+        th, td {
+            border: 1px solid #007BFF;
+            padding: 10px;
+            text-align: center;
+        }
+
+        th {
+            background-color: #007BFF;
+            color: white;
+        }
+
+        td:first-child {
+            font-weight: bold;
+        }
+
+        img {
+            width: 100px;
+            cursor: pointer;
+        }
+
         @media (max-width: 768px) {
-            .grid-container {
+            .grid-2col {
                 flex-direction: column;
             }
-            .organization {
-                width: 100%;
-            }
+        }
+
+        footer {
+            text-align: center;
+            padding: 10px;
+            font-size: 14px;
+            color: #777;
+            background: #eaeaea;
+            margin-top: 30px;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>KHUYẾN CÁO CÁC ĐIỀU KIỆN TẦM SOÁT UNG THƯ PHỔI</h1>
-        <div class="grid-container">
+    <header>
+        <h1>TẦM SOÁT UNG THƯ PHỔI BẰNG CT LIỀU THẤP (LDCT)</h1>
+        <p class="subhead">Tổng hợp khuyến cáo - giới hạn liều - cấu hình thiết bị</p>
+    </header>
+
+    <div class="credits">
+        <img src="https://i.postimg.cc/tTbb7VJW/81dc535f2325f27bab34.jpg" alt="Logo KTV 3 Miền">
+        <p>Biên soạn bởi nhóm <span style="color:#007BFF">KTV 3 Miền</span></p>
+    </div>
+
+    <section>
+        <h2>Khuyến cáo từ các tổ chức y tế</h2>
+        <div class="grid-2col">
             <div class="organization">
-                <h2>Hiệp hội Ung thư Hoa Kỳ (ACS)</h2>
-                <p><strong>Đối tượng:</strong></p>
+                <h3>Hiệp hội Ung thư Hoa Kỳ (ACS)</h3>
                 <ul>
                     <li>Tuổi: 50 - 80</li>
                     <li>Hút thuốc ≥ 20 gói-năm</li>
@@ -103,8 +141,7 @@
                 </ul>
             </div>
             <div class="organization">
-                <h2>Hiệp hội Phổi Hoa Kỳ (ALA)</h2>
-                <p><strong>Đối tượng:</strong></p>
+                <h3>Hiệp hội Phổi Hoa Kỳ (ALA)</h3>
                 <ul>
                     <li>Tuổi: 50 - 80</li>
                     <li>Hút thuốc ≥ 20 gói-năm</li>
@@ -113,129 +150,80 @@
                 </ul>
             </div>
         </div>
-    </div>
-</body>
-</html>
+    </section>
 
-<!DOCTYPE html>
-<html lang="vi">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bảng Liều Nhiễm Xạ LDCT</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            background-color: #f4f4f4;
-            text-align: center;
-        }
-        .table-container {
-            max-width: 1000px;
-            margin: auto;
-            background: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin-top: 30px; /* Thêm khoảng cách giữa hai bảng */
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            border: 2px solid blue;
-        }
-        th, td {
-            border: 1px solid blue;
-            padding: 10px;
-            text-align: center;
-        }
-        th {
-            background-color: #007BFF;
-            color: white;
-        }
-        td strong {
-            color: #0056b3;
-        }
-    </style>
-</head>
-<body>
-    <div class="table-container">
-        <h2>LIỀU PHƠI NHIỄM KHUYẾN NGHỊ TRONG LDCT</h2>
+    <section>
+        <h2>Giới hạn liều phơi nhiễm trong LDCT</h2>
         <table>
             <tr>
                 <th>Tổ chức</th>
-                <th>Chỉ số DLP (mGy·cm)</th>
-                <th>Chỉ số CTDIvol (mGy)</th>
+                <th>DLP (mGy·cm)</th>
+                <th>CTDIvol (mGy)</th>
                 <th>Ghi chú</th>
             </tr>
             <tr>
-                <td><strong>American College of Radiology (ACR)</strong></td>
+                <td>American College of Radiology (ACR)</td>
                 <td>≤ 75 (Nam) / ≤ 60 (Nữ)</td>
                 <td>≤ 3.0</td>
-                <td>Áp dụng cho bệnh nhân BMI < 30</td>
+                <td>Áp dụng cho bệnh nhân BMI &lt; 30</td>
             </tr>
             <tr>
-                <td><strong>European Guidelines (EU-ETS, ESR)</strong></td>
+                <td>European Guidelines (EU-ETS, ESR)</td>
                 <td>≤ 100</td>
                 <td>≤ 3.0</td>
                 <td>Mức liều tối ưu cho tầm soát</td>
             </tr>
             <tr>
-                <td><strong>American Association of Physicists in Medicine (AAPM)</strong></td>
+                <td>American Association of Physicists in Medicine (AAPM)</td>
                 <td>≤ 100</td>
                 <td>≤ 3.0</td>
                 <td>Hướng dẫn giới hạn liều</td>
             </tr>
         </table>
-    </div>
-</body>
-</html>
+    </section>
 
-    
-    <h2>DANH SÁCH THIÊT BỊ VÀ THÔNG SỐ CÀI ĐẶT CHO KỸ THUẬT CT PHỔI LIỀU THẤP</h2>
-    
-    <table>
-        <thead>
-            <tr>
-                <th>HÃNG MÁY</th>
-                <th>AEC</th>
-                <th>TÊN MÁY</th>
-                <th>THÔNG SỐ</th>
-            </tr>
-        </thead>
-        <tbody id="table-body">
-            <!-- Dữ liệu sẽ được thêm vào đây -->
-        </tbody>
-    </table>
+    <section>
+        <h2>Thiết bị & Thông số cài đặt</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Hãng máy</th>
+                    <th>AEC</th>
+                    <th>Tên máy</th>
+                    <th>Thông số</th>
+                </tr>
+            </thead>
+            <tbody id="table-body">
+                <!-- Dữ liệu sẽ được thêm qua JS -->
+            </tbody>
+        </table>
+    </section>
+
+    <footer>
+        © 2025 LDCT Việt Nam | Dành cho đào tạo & tham khảo y khoa
+    </footer>
 
     <script>
-        const apiUrl = "https://script.google.com/macros/s/AKfycbxdrVHpZUf8xlKkltSWV4AX45clpx-cH3IkpUnhJbvhEmVSF8vA5MamM4y7ls7Nofur/exec"; // Thay URL từ Apps Script vào đây
+        const apiUrl = "https://script.google.com/macros/s/AKfycbxdrVHpZUf8xlKkltSWV4AX45clpx-cH3IkpUnhJbvhEmVSF8vA5MamM4y7ls7Nofur/exec";
 
         fetch(apiUrl)
             .then(response => response.json())
             .then(data => {
-                let tableBody = document.getElementById("table-body");
-                tableBody.innerHTML = ""; // Xóa dữ liệu cũ nếu có
+                const tableBody = document.getElementById("table-body");
+                tableBody.innerHTML = "";
 
                 data.forEach(row => {
-                    let tr = document.createElement("tr");
-
+                    const tr = document.createElement("tr");
                     tr.innerHTML = `
                         <td>${row.HANGMAY}</td>
                         <td>${row.AEC}</td>
                         <td>${row.TENMAY}</td>
-                        <td>
-                            <a href="${row.LINK}" target="_blank">
-                                <img src="${row.LINK}">
-                            </a>
-                        </td>
+                        <td><a href="${row.LINK}" target="_blank"><img src="${row.LINK}" alt="Thông số"></a></td>
                     `;
-
                     tableBody.appendChild(tr);
                 });
             })
             .catch(error => console.error("Lỗi khi tải dữ liệu:", error));
     </script>
-
 </body>
 </html>
