--- a/index.html
+++ b/index.html
@@ -173,30 +173,60 @@
                 <td>≤ 3.0</td>
                 <td>Mức liều tối ưu cho tầm soát</td>
             </tr>
-            <tr>
-                <td>American Association of Physicists in Medicine (AAPM)</td>
-                <td>≤ 100</td>
-                <td>≤ 3.0</td>
-                <td>Hướng dẫn giới hạn liều</td>
-            </tr>
-        </table>
-    </section>
+            $1
+</table>
+</section>
 
-    <section>
-        <h2>Thiết bị & Thông số cài đặt</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>Hãng máy</th>
-                    <th>AEC</th>
-                    <th>Tên máy</th>
-                    <th>Thông số</th>
-                </tr>
-            </thead>
-            <tbody id="table-body">
-                <!-- Dữ liệu sẽ được thêm qua JS -->
-            </tbody>
-        </table>
+<section>
+    <h2>Giải thích các thông số đo liều</h2>
+    <ul>
+        <li><strong>CTDI<sub>vol</sub> (mGy):</strong> Là viết tắt của "Computed Tomography Dose Index volume", chỉ số phản ánh liều bức xạ trung bình được hấp thụ trong một thể tích phantom (16 cm hoặc 32 cm tuỳ vùng khảo sát). CTDI<sub>vol</sub> được chuẩn hoá theo độ dài lát cắt và số lượng lát chồng lên nhau, dùng để so sánh liều giữa các thiết lập khác nhau và giữa các máy CT.</li>
+        <li><strong>DLP (Dose-Length Product, mGy·cm):</strong> Tích số giữa CTDI<sub>vol</sub> và chiều dài vùng quét, phản ánh tổng liều phơi nhiễm bức xạ trong toàn bộ khảo sát.</li>
+        <li><strong>Hiệu liều hiệu dụng (Effective Dose, mSv):</strong> Ước tính liều phơi nhiễm tổng quát đến cơ thể dựa trên DLP và hệ số chuyển đổi (k), phụ thuộc vào vùng khảo sát và nhóm tuổi.</li>
+        <li><strong>Hệ số chuyển đổi (k):</strong> Đơn vị mSv / (mGy·cm), thường dùng k ≈ 0.014 mSv/mGy·cm cho ngực người lớn.</li>
+    </ul>
+</section>
+
+$1
+<section>
+    <h2>Hệ số chuyển đổi theo vùng cơ thể</h2>
+    <table style="margin-top: 20px; width: 100%; max-width: 1000px; margin-left: auto; margin-right: auto;">
+        <thead>
+            <tr>
+                <th>Vùng cơ thể</th>
+                <th>Hệ số k (mSv / mGy·cm)</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr><td>Đầu</td><td>0.0021</td></tr>
+            <tr><td>Cổ</td><td>0.0059</td></tr>
+            <tr><td>Ngực</td><td>0.014</td></tr>
+            <tr><td>Bụng</td><td>0.015</td></tr>
+            <tr><td>Khung chậu</td><td>0.019</td></tr>
+        </tbody>
+    </table>
+    <p style="text-align:center; font-style:italic; color:#555; margin-top:10px;">Nguồn tham khảo: ICRP Publication 103, AAPM Report No. 96</p>
+</section>
+
+
+        </tbody>
+    
+
+
+
+        <section>
+    <h2>Thiết bị & Thông số cài đặt</h2>
+    <table style="width: 100%; max-width: 1000px; margin-left: auto; margin-right: auto;">
+        <thead>
+            <tr>
+                <th>Hãng máy</th>
+                <th>AEC</th>
+                <th>Tên máy</th>
+                <th>Thông số</th>
+            </tr>
+        </thead>
+        <tbody id="table-body">
+                  
     </section>
 
     <footer>
@@ -207,23 +237,39 @@
         const apiUrl = "https://script.google.com/macros/s/AKfycbxdrVHpZUf8xlKkltSWV4AX45clpx-cH3IkpUnhJbvhEmVSF8vA5MamM4y7ls7Nofur/exec";
 
         fetch(apiUrl)
-            .then(response => response.json())
+            .then(response => {
+                if (!response.ok) throw new Error("Không thể kết nối tới Google Apps Script");
+                return response.json();
+            })
             .then(data => {
                 const tableBody = document.getElementById("table-body");
-                tableBody.innerHTML = "";
 
                 data.forEach(row => {
+                    let color = "inherit";
+                    let logoInInfo = "";
+
+                    if (row.HANGMAY === "GE") {
+                        color = "blue";
+                    }
+                    if (row.HANGMAY === "Siemens") {
+                        color = "#00B0B9";
+                        logoInInfo = '<img src="logo_siemens.png" alt="Siemens" style="height:20px; margin-right:5px; vertical-align:middle;">';
+                    }
+
                     const tr = document.createElement("tr");
                     tr.innerHTML = `
-                        <td>${row.HANGMAY}</td>
+                        <td style="font-weight:bold; color: ${color}">${row.HANGMAY}</td>
                         <td>${row.AEC}</td>
                         <td>${row.TENMAY}</td>
-                        <td><a href="${row.LINK}" target="_blank"><img src="${row.LINK}" alt="Thông số"></a></td>
+                        <td>${logoInInfo}<a href="${row.LINK}" target="_blank"><img src="${row.LINK}"></a></td>
                     `;
                     tableBody.appendChild(tr);
                 });
             })
-            .catch(error => console.error("Lỗi khi tải dữ liệu:", error));
+            .catch(error => {
+                console.error("Lỗi khi tải dữ liệu:", error);
+                alert("Không thể tải dữ liệu thiết bị. Vui lòng kiểm tra kết nối hoặc đường dẫn API.");
+            });
     </script>
 </body>
 </html>
