--- a/index.html
+++ b/index.html
@@ -120,13 +120,17 @@
 </head>
 <body>
     <header>
-        <h1>TẦM SOÁT UNG THƯ PHỔI BẰNG CT LIỀU THẤP (LDCT)</h1>
+        <h1>
+  TRANG WEB HƯỚNG DẪN TẦM SOÁT UNG THƯ PHỔI BẰNG CT LIỀU THẤP (LDCT)<br>
+  LUNG CANCER SCREENING BY LOW DOSE CT
+</h1>
+
         <p class="subhead">TỔNG HỢP KHUYẾN CÁO - GIỚI HẠN LIỀU KHUYẾN NGHỊ - THÔNG SỐ CÀI ĐẶT</p>
     </header>
 
-    <div class="credits">
-        <img src="https://i.postimg.cc/tTbb7VJW/81dc535f2325f27bab34.jpg" alt="Logo KTV 3 Miền">
-        <p>Biên soạn bởi nhóm <span style="color:#007BFF">KTV 3 Miền</span></p>
+    <div class="credits" style="display: flex; align-items: center; justify-content: center; gap: 20px;">
+  <img src="https://i.postimg.cc/tTbb7VJW/81dc535f2325f27bab34.jpg" alt="Logo KTV 3 Miền">
+  <p style="margin: 0; font-weight: bold; font-size: 16px; color: #333;">Biên soạn bởi nhóm <span style="color:#007BFF">KTV 3 Miền</span></p>
     </div>
 
     <section>
@@ -169,7 +173,7 @@
 </script>
 
     <section>
-        <h2>Giới hạn liều phơi nhiễm trong LDCT</h2>
+        <h2>GIỚI HẠN LIỀU KHUYẾN NGHỊ TRONG LDCT</h2>
         <table>
             <tr>
                 <th>Tổ chức</th>
@@ -183,18 +187,24 @@
                 <td>≤ 3.0</td>
                 <td>Áp dụng cho bệnh nhân BMI &lt; 30</td>
             </tr>
-            <tr>
-                <td>European Guidelines (EU-ETS, ESR)</td>
+<tr>
+<td>American Association of Physicists in Medicine (AAPM)</td>
+<td>≤ 100</td>
+<td>≤ 3.0</td>
+<td>Hướng dẫn giới hạn liều</td>
+</tr>
+<tr>
+<td>European Guidelines (EU-ETS, ESR)</td>
                 <td>≤ 100</td>
                 <td>≤ 3.0</td>
                 <td>Mức liều tối ưu cho tầm soát</td>
             </tr>
-            $1
+        
 </table>
 </section>
 
 <section>
-    <h2>Giải thích các thông số đo liều</h2>
+    <h2>GIẢI THÍCH CÁC THÔNG SỐ TÍNH TOÁN LIỀU PHƠI NHIỄM BỨC XẠ TRONG CT</h2>
     <ul>
         <li><strong>CTDI<sub>vol</sub> (mGy):</strong> Là viết tắt của "Computed Tomography Dose Index volume", chỉ số phản ánh liều bức xạ trung bình được hấp thụ trong một thể tích phantom (16 cm hoặc 32 cm tuỳ vùng khảo sát). CTDI<sub>vol</sub> được chuẩn hoá theo độ dài lát cắt và số lượng lát chồng lên nhau, dùng để so sánh liều giữa các thiết lập khác nhau và giữa các máy CT.</li>
         <li><strong>DLP (Dose-Length Product, mGy·cm):</strong> Tích số giữa CTDI<sub>vol</sub> và chiều dài vùng quét, phản ánh tổng liều phơi nhiễm bức xạ trong toàn bộ khảo sát.</li>
