--- a/index.html
+++ b/index.html
@@ -321,3 +321,5 @@
     </script>
 </body>
 </html>
+<img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fhttps://lethanhtrong-cm.github.io/lunglowdose/&count_bg=%23007BFF&title_bg=%23ffffff&icon=&icon_color=%23E7E7E7&title=Truy+c%E1%BA%ADp&edge_flat=false"/>
+</footer>
