--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
+    <script src="https://cdn.counter.dev/script.js" data-id="86e74dda-26a8-41de-99d1-63d0e8fec60e" data-utcoffset="7"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tầm Soát Ung Thư Phổi - LDCT</title>
@@ -321,5 +322,3 @@
     </script>
 </body>
 </html>
-<img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://lethanhtrong-cm.github.io/lunglowdose/&count_bg=%23007BFF&title_bg=%23ffffff&icon=&icon_color=%23E7E7E7&title=Truy+c%E1%BA%ADp&edge_flat=false"/>
-</footer>
