--- a/lunglowdose/index.html
+++ b/lunglowdose/index.html
@@ -173,6 +173,24 @@
   }
 </script>
 
+    </section>
+
+<section>
+  <h2>Nghiên cứu nổi bật: National Lung Screening Trial (NLST)</h2>
+  <div style="background:#fdfdfd; border-left: 5px solid #007BFF; padding: 20px; border-radius: 10px; box-shadow: 2px 2px 8px rgba(0,0,0,0.05); max-width: 1000px; margin: 0 auto;">
+    <p><strong>NLST (Hoa Kỳ) – 2011:</strong> Là thử nghiệm lâm sàng ngẫu nhiên quy mô lớn với hơn <strong>53,000 người tham gia</strong> từ 55–74 tuổi, có tiền sử hút thuốc ≥30 gói-năm.</p>
+    <ul>
+      <li>So sánh hai phương pháp: chụp CT liều thấp (LDCT) và X-quang ngực tiêu chuẩn.</li>
+      <li>Kết quả: LDCT giúp <strong>giảm 20% tỷ lệ tử vong do ung thư phổi</strong> so với X-quang ngực.</li>
+      <li>LDCT phát hiện ung thư phổi ở giai đoạn sớm hơn đáng kể.</li>
+    </ul>
+    <p style="text-align:center; margin-top:15px;">
+      <a href="https://www.nejm.org/doi/full/10.1056/NEJMoa1102873" target="_blank" style="background:#007BFF; color:white; padding:10px 20px; border-radius:5px; text-decoration:none; font-weight:bold;">Xem chi tiết nghiên cứu tại NEJM</a>
+    </p>
+  </div>
+</section>
+
+    
     <section>
         <h2>GIỚI HẠN LIỀU KHUYẾN NGHỊ TRONG LDCT</h2>
         <table>
