--- a/dosecal/index.html
+++ b/dosecal/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="vi">
 <head>
@@ -12,6 +11,21 @@
       margin: 0;
       padding: 20px;
     }
+    header {
+      background-color: #007BFF;
+      color: white;
+      padding: 20px 0;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 28px;
+    }
+    header p {
+      font-size: 16px;
+      margin-top: 10px;
+    }
     section {
       max-width: 720px;
       margin: auto;
@@ -19,16 +33,6 @@
       padding: 30px 20px;
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    }
-    h2 {
-      text-align: center;
-      margin-bottom: 10px;
-    }
-    p.description {
-      text-align: center;
-      color: #666;
-      font-size: 15px;
-      margin-bottom: 25px;
     }
     .form-group {
       display: flex;
@@ -72,134 +76,153 @@
       font-weight: bold;
       color: #333;
     }
-    .lang-select {
-      text-align: right;
-      margin-bottom: 10px;
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+      border: 2px solid #007BFF;
     }
-    #printBtn {
-      display: block;
-      margin: 20px auto 0;
-      background-color: #28a745;
+    th, td {
+      padding: 12px;
+      text-align: left;
+      border: 1px solid #ddd;
+    }
+    th {
+      background-color: #007BFF;
+      color: white;
+    }
+    .source {
+      font-size: 14px;
+      color: #555;
+      margin-top: 20px;
+      text-align: center;
+    }
+    .source a {
+      color: #007BFF;
+      text-decoration: none;
+    }
+    .source a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
 
+  <header>
+    <h1>Công cụ tính liều hiệu dụng từ DLP</h1>
+    <p>Hướng dẫn tính toán liều hiệu dụng từ chỉ số DLP trong CT để giúp đánh giá mức độ bức xạ nhận được</p>
+  </header>
+
   <section>
-    <div class="lang-select">
-      <label for="languageSelect">Ngôn ngữ / Language:</label>
-      <select id="languageSelect" onchange="switchLanguage()">
-        <option value="vi">Tiếng Việt</option>
-        <option value="en">English</option>
-      </select>
-    </div>
-
-    <h2 id="title">Công cụ tính liều hiệu dụng từ DLP</h2>
-    <p class="description" id="description">Nhập giá trị DLP và chọn vùng cơ thể để ước tính liều hiệu dụng (Effective Dose) theo đơn vị mSv.</p>
-
     <div class="form-group">
       <div class="form-item">
         <label id="labelRegion" for="bodyRegion">Vùng cơ thể:</label>
         <select id="bodyRegion" onchange="updateK()">
           <option value="">-- Chọn --</option>
-          <option value="0.0021">Đầu / Head</option>
-          <option value="0.0059">Cổ / Neck</option>
-          <option value="0.014">Ngực / Chest</option>
-          <option value="0.015">Bụng / Abdomen</option>
-          <option value="0.019">Khung chậu / Pelvis</option>
-          <option value="0.021">Ngực + Bụng / Chest + Abdomen</option>
+          <option value="0.0021">Đầu</option>
+          <option value="0.0059">Cổ</option>
+          <option value="0.014">Ngực</option>
+          <option value="0.015">Bụng</option>
+          <option value="0.019">Khung chậu</option>
         </select>
       </div>
       <div class="form-item">
         <label id="labelK" for="kValue">Hệ số k:</label>
-        <input id="kValue" type="text" readonly placeholder="Tự động điền / Auto-filled">
+        <input id="kValue" type="text" readonly placeholder="Tự động điền">
       </div>
       <div class="form-item">
-        <label id="labelDLP" for="dlp">Nhập DLP <span style="color:#666;">(mGy·cm)</span>:</label>
-        <input id="dlp" type="number" placeholder="VD: 80 / e.g. 80">
+        <label id="labelDLP" for="dlp">Nhập DLP (mGy·cm):</label>
+        <input id="dlp" type="number" placeholder="VD: 80">
       </div>
       <div class="form-item" style="text-align: center;">
-        <label>&nbsp;</label>
-        <button id="calcBtn" onclick="calculateDose()">Tính liều</button>
+        <button onclick="calculateDose()">Tính liều</button>
       </div>
     </div>
 
     <div id="resultDose"></div>
-    <button id="printBtn" onclick="window.print()">🖨️ In kết quả / Print Result</button>
 
-    <script>
-      const langText = {
-        vi: {
-          title: "Công cụ tính liều hiệu dụng từ DLP",
-          description: "Nhập giá trị DLP và chọn vùng cơ thể để ước tính liều hiệu dụng (Effective Dose) theo đơn vị mSv.",
-          region: "Vùng cơ thể:",
-          kvalue: "Hệ số k:",
-          dlp: "Nhập DLP",
-          calc: "Tính liều",
-          placeholderDLP: "VD: 80",
-          autofill: "Tự động điền",
-          warning: "⚠️ Vui lòng chọn vùng cơ thể và nhập DLP hợp lệ.",
-          result: (dose) => `Liều hiệu dụng ước tính: ${dose} mSv (milisievert)`
-        },
-        en: {
-          title: "Effective Dose Calculator from DLP",
-          description: "Enter the DLP value and select the body region to estimate the effective dose in mSv.",
-          region: "Body region:",
-          kvalue: "k factor:",
-          dlp: "Enter DLP",
-          calc: "Calculate",
-          placeholderDLP: "e.g. 80",
-          autofill: "Auto-filled",
-          warning: "⚠️ Please select a body region and enter a valid DLP.",
-          result: (dose) => `Estimated effective dose: ${dose} mSv (millisievert)`
-        }
-      };
+    <!-- Bảng hệ số k -->
+    <h3>Hệ số k cho các vùng cơ thể</h3>
+    <table>
+      <thead>
+        <tr>
+          <th>Bộ phận</th>
+          <th>Hệ số k</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Đầu</td>
+          <td>0.0021</td>
+        </tr>
+        <tr>
+          <td>Cổ</td>
+          <td>0.0059</td>
+        </tr>
+        <tr>
+          <td>Ngực</td>
+          <td>0.014</td>
+        </tr>
+        <tr>
+          <td>Bụng</td>
+          <td>0.015</td>
+        </tr>
+        <tr>
+          <td>Khung chậu</td>
+          <td>0.019</td>
+        </tr>
+      </tbody>
+    </table>
 
-      function switchLanguage() {
-        const lang = document.getElementById("languageSelect").value;
-        localStorage.setItem("lang", lang);
-        const t = langText[lang];
-        document.getElementById("title").textContent = t.title;
-        document.getElementById("description").textContent = t.description;
-        document.getElementById("labelRegion").textContent = t.region;
-        document.getElementById("labelK").textContent = t.kvalue;
-        document.getElementById("labelDLP").innerHTML = `${t.dlp} <span style=\"color:#666;\">(mGy·cm)</span>`;
-        document.getElementById("dlp").placeholder = t.placeholderDLP;
-        document.getElementById("kValue").placeholder = t.autofill;
-        document.getElementById("calcBtn").textContent = t.calc;
-        document.getElementById("printBtn").textContent = lang === 'vi' ? "🖨️ In kết quả / Print Result" : "🖨️ Print Result / In kết quả";
-      }
+    <div class="source">
+      <p><strong>Nguồn trích dẫn:</strong> <a href="https://www.icrp.org/publications" target="_blank">ICRP Publication 103, 2007</a></p>
+    </div>
 
-      function updateK() {
-        const k = document.getElementById("bodyRegion").value;
-        document.getElementById("kValue").value = k;
-      }
-
-      function calculateDose() {
-        const lang = document.getElementById("languageSelect").value;
-        const t = langText[lang];
-        const dlp = parseFloat(document.getElementById("dlp").value);
-        const k = parseFloat(document.getElementById("kValue").value);
-        const resultDiv = document.getElementById("resultDose");
-
-        if (isNaN(dlp) || isNaN(k)) {
-          resultDiv.textContent = t.warning;
-          resultDiv.style.color = "#d9534f";
-          return;
-        }
-
-        const dose = Math.round(dlp * k * 100) / 100;
-        resultDiv.textContent = t.result(dose);
-        resultDiv.style.color = "#28a745";
-      }
-
-      window.onload = () => {
-        const savedLang = localStorage.getItem("lang") || "vi";
-        document.getElementById("languageSelect").value = savedLang;
-        switchLanguage();
-      };
-    </script>
   </section>
+
+  <script>
+    function updateK() {
+      const bodyRegion = document.getElementById("bodyRegion").value;
+      const kValue = document.getElementById("kValue");
+
+      // Cập nhật giá trị hệ số k theo vùng cơ thể đã chọn
+      switch (bodyRegion) {
+        case "0.0021":
+          kValue.value = "0.0021";  // Đầu
+          break;
+        case "0.0059":
+          kValue.value = "0.0059";  // Cổ
+          break;
+        case "0.014":
+          kValue.value = "0.014";  // Ngực
+          break;
+        case "0.015":
+          kValue.value = "0.015";  // Bụng
+          break;
+        case "0.019":
+          kValue.value = "0.019";  // Khung chậu
+          break;
+        default:
+          kValue.value = "";  // Nếu không chọn gì, ô sẽ trống
+      }
+    }
+
+    function calculateDose() {
+      const dlp = parseFloat(document.getElementById("dlp").value);
+      const k = parseFloat(document.getElementById("kValue").value);
+      const resultDiv = document.getElementById("resultDose");
+
+      if (isNaN(dlp) || isNaN(k)) {
+        resultDiv.textContent = "⚠️ Vui lòng chọn vùng cơ thể và nhập DLP hợp lệ.";
+        resultDiv.style.color = "#d9534f";
+        return;
+      }
+
+      const dose = Math.round(dlp * k * 100) / 100;
+      resultDiv.textContent = `Liều hiệu dụng ước tính: ${dose} mSv (milisievert)`;
+      resultDiv.style.color = "#28a745";
+    }
+  </script>
 
 </body>
 </html>
