--- a/lunglowdose/index.html
+++ b/lunglowdose/index.html
@@ -119,6 +119,15 @@
         }
     </style>
 </head>
+
+   <nav style="background-color:#0056b3; padding: 12px 0;">
+  <div style="max-width: 1000px; margin: auto; display: flex; justify-content: center; align-items: center; gap: 25px;">
+    <a href="#guidelines" style="color:white; text-decoration:none; font-size: 17px; font-weight: bold;">Khuyến cáo</a>
+    <span style="color:white; font-size:18px;">|</span>
+    <a href="https://vnrad.tech/dosecal/" target="_blank" style="color:white; text-decoration:none; font-size: 17px; font-weight: bold;">Công cụ tính liều</a>
+  </div>
+</nav>
+ 
 <body>
     <header>
         <h1>
